clusters/sirius/apps/jackett/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jackett
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jackett
  template:
    metadata:
      labels:
        app: jackett
    spec:
      containers:
        - name: jackett
          image: lscr.io/linuxserver/jackett:version-v0.22.1685
          ports:
            - containerPort: 9117
          volumeMounts:
            - name: config
              mountPath: /config
          readinessProbe:
            exec:
              command: ["test", "-f", "/config/DONOTDELETE"]
            initialDelaySeconds: 5
            periodSeconds: 10
      volumes:
        - name: config
          nfs:
            server: 192.168.1.10
            path: /mnt/primary/root/config/jackett
            readOnly: false
        - name: settings-override
          configMap:
            name: settings-override
