clusters/sirius/apps/jackett/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jackett
spec:
  selector:
    app: jackett
  ports:
    - protocol: TCP
      port: 9117 # Port exposed by the service
      targetPort: 9117 # Port the container is listening on
      name: http # Named port for ingress
  type: ClusterIP
